build: replace unsupported Collection methods by the language level